# a11y-guidelines

./: .gitignore  .gitmodules  .lintstagedrc.mjs  .textlintrc  CLAUDE.md  CNAME  Makefile  README.md  build.mk  package-lock.json  package.json  requirements-dev.txt  requirements.txt  version.py
tools/lib/freee_a11y_gl/: .flake8  MANIFEST.in  README.md  conftest.py  pyproject.toml  run_tests.py
tools/lib/freee_a11y_gl/docs/: API_REFERENCE.md  CONFIGURATION.md
tools/lib/freee_a11y_gl/src/freee_a11y_gl/: __init__.py  config.py  config.yaml.sample  config_main.py  constants.py  error_recovery.py  exceptions.py  info_utils.py  initializer.py  logging_config.py  message_catalog.py  relationship_manager.py  settings.py  source.py  utils.py  validation_utils.py  version_utils.py  yaml_validator.py
tools/lib/freee_a11y_gl/src/freee_a11y_gl/config/: __init__.py  localization_config.py  message_config.py  path_config.py  tool_config.py  validation_config.py
tools/lib/freee_a11y_gl/src/freee_a11y_gl/data/: __init__.py  config.yaml  messages.yaml
tools/lib/freee_a11y_gl/src/freee_a11y_gl/mixins/: __init__.py  template_mixin.py
tools/lib/freee_a11y_gl/src/freee_a11y_gl/models/: __init__.py  axe.py  base.py  check.py  content.py  reference.py
tools/lib/freee_a11y_gl/src/freee_a11y_gl/models/faq/: article.py  tag.py
tools/lib/freee_a11y_gl/src/freee_a11y_gl/yaml_processor/: process_yaml.py  rst_processor.py
tools/lib/freee_a11y_gl/tests/core/: __init__.py  test_config.py  test_error_recovery.py  test_exceptions.py  test_info_utils.py  test_initializer.py  test_initializer_validation.py  test_logging_config.py  test_message_catalog.py  test_message_config_error_paths.py  test_path_config_error_paths.py  test_settings.py  test_source.py  test_utils.py  test_validation_utils.py  test_version_utils.py  test_yaml_validation_config.py  test_yaml_validator.py
tools/lib/freee_a11y_gl/tests/managers/: __init__.py  test_relationship_manager.py
tools/lib/freee_a11y_gl/tests/mixins/: __init__.py  test_template_mixin.py
tools/lib/freee_a11y_gl/tests/models/: __init__.py  base_test.py  test_axe.py  test_base.py  test_check.py  test_check_comprehensive.py  test_content.py  test_faq_article.py  test_guideline.py  test_info_ref.py
tools/lib/freee_a11y_gl/tests/models/faq/: test_tag.py
tools/lib/freee_a11y_gl/tests/yaml_processor/: __init__.py  test_process_yaml.py  test_rst_processor.py
tools/scripts/yaml2rst/: .coveragerc  MANIFEST.in  README.md  pyproject.toml  pytest.ini  run_tests.py
tools/scripts/yaml2rst/docs/: API_REFERENCE.md  ARCHITECTURE.md  TEMPLATE_CUSTOMIZATION.md
tools/scripts/yaml2rst/src/yaml2rst/: __main__.py  config.py  initializer.py  path.py  template_config.py  template_manager.py  template_resolver.py  yaml2rst.py
tools/scripts/yaml2rst/src/yaml2rst/generators/: __init__.py  base_generator.py  common_generators.py  content_generator_base.py  file_generator.py  mixins.py
tools/scripts/yaml2rst/src/yaml2rst/generators/content_generators/: category_generator.py  check_generator.py  faq_generator.py  makefile_generator.py  reference_generator.py  wcag_generator.py
tools/scripts/yaml2rst/src/yaml2rst/templates/: axe-rules.rst  gl-category.rst  info_to_faq.rst  info_to_gl.rst
tools/scripts/yaml2rst/src/yaml2rst/templates/checks/: examples-tool.rst  (+1 more)
tools/scripts/yaml2rst/tests/: README.md  conftest.py
tools/scripts/yaml2rst/tests/functional/: test_cli.py
tools/scripts/yaml2rst/tests/integration/: test_e2e_generation.py  test_existing_templates_verification.py  test_template_customization.py
tools/scripts/yaml2rst/tests/performance/: test_performance.py
tools/scripts/yaml2rst/tests/unit/: test_base_generator.py  test_category_generator.py  test_check_generator.py  test_common_generators.py  test_config.py  test_content_generator_base.py  test_faq_generator.py  test_file_generator.py  test_initializer.py  test_main_entry_point.py  test_makefile_generator.py  test_mixins.py  test_path.py  test_reference_generator.py  test_template_config.py  test_template_export.py  test_template_manager.py  test_template_resolver.py  test_wcag_generator.py  test_yaml2rst_main.py
tools/scripts/yaml2sheet/: .gitignore  MANIFEST.in  README.md  pyproject.toml  pytest.ini
tools/scripts/yaml2sheet/src/yaml2sheet/: __init__.py  __main__.py  auth.py  batch_update_manager.py  cell_data.py  column_config.py  column_manager.py  condition_formatter.py  config.ini.sample  config.py  config.toml.sample  config.yaml.sample  config_loader.py  data_processor.py  result_config.py  row_data_builder.py  sheet_api_client.py  sheet_content_manager.py  sheet_formatter.py  sheet_generator.py  sheet_structure.py  sheet_structure_builder.py  spreadsheet_manager.py  target_config.py  types.py  utils.py  yaml2sheet.py
tools/scripts/yaml2sheet/tests/: README.md  conftest.py
tools/scripts/yaml2sheet/tests/fixtures/config/: invalid_config.yaml  valid_config.yaml
tools/scripts/yaml2sheet/tests/unit/: test___main__.py  test_auth.py  test_batch_update_manager.py  test_cell_data.py  test_column_manager.py  test_condition_formatter.py  test_config_loader.py  test_data_processor.py  test_main.py  test_row_data_builder.py  test_sheet_content_manager.py  test_sheet_formatter.py  test_sheet_generator.py  test_sheet_structure_builder.py  test_utils.py  test_yaml2sheet_main.py
tools/yaml2x/libs/freee_a11y_gl/: pyproject.toml
tools/yaml2x/libs/freee_a11y_gl/freee_a11y_gl/: __init__.py  classes.py  config.development.yaml  config.production.yaml  config.py  config.yaml.sample  constants.py  info_utils.py  initializer.py  relationship_manager.py  settings.py  source.py  utils.py  version_utils.py
tools/yaml2x/libs/freee_a11y_gl/freee_a11y_gl/models/: __init__.py  axe.py  check.py  content.py  reference.py
tools/yaml2x/libs/freee_a11y_gl/freee_a11y_gl/yaml_processor/: __init__.py  process_yaml.py
tools/yaml2x/libs/freee_a11y_gl/src/freee_a11y_gl/: settings.py
tools/yaml2x/libs/get_yaml_data/: pyproject.toml
tools/yaml2x/libs/get_yaml_data/get_yaml_data/: config.py  process_yaml.py  utils.py
(+912 files in other folders)
