[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freee_a11y_gl"
version = "0.2.0"
description = "A module to process a11y guidelines data"
authors = [
    {name = "Masafumi NAKANE", email = "max@freee.co.jp"}
]
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0",
    "gitpython>=3.1.43",
    "pydantic>=2.7.0",
    "importlib_resources>=1.3.0; python_version<'3.9'"
]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.package-data]
freee_a11y_gl = ["data/*.yaml"]
