[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yaml2rst"
version = "0.1.1"
description = "Process YAML files into reStructuredText to e included in the guidelines document."
readme = "README.md"
authors = [
    { name = "Masafumi NAKANE", email = "max@freee.co.jp" }
]
dependencies = [
    "jinja2",
    "freee_a11y_gl>=0.1.0",
]
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["yaml2rst*"]

[project.scripts]
yaml2rst = "yaml2rst.yaml2rst:main"
