[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yaml2sheet"
version = "0.1.3"
description = "Generate checklist in Google Sheets from YAML data"
readme = "README.md"
authors = [
    { name = "Masafumi NAKANE", email = "max@freee.co.jp" }
]
dependencies = [
    "google-api-python-client",
    "google-auth-oauthlib",
    "sphinx",
    "toml",
    "freee_a11y_gl>=0.1.0"
]
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["yaml2sheet*"]

[project.scripts]
yaml2sheet = "yaml2sheet.yaml2sheet:main"
