[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "get_yaml_data"
version = "0.1.0"
description = "A module to process YAML data"
authors = [
    {name = "Masafumi NAKANE", email = "max@freee.co.jp"}
]
requires-python = ">=3.8"

[project.scripts]
yaml2json = "get_yaml_data.cli:main"

[tool.setuptools]
packages = { find = {} }
